--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,15 +28,11 @@ jobs:
           set -e
           mbed-tools deploy
           mbed-tools compile -t GCC_ARM -m ${{ matrix.target }} --profile ${{ matrix.profile }}
-          
-      - name: build-example-application
-        run: |
-          ls
 
       - name: Update
         uses: s0/git-publish-subdir-action@develop
         env:
           REPO: self
           BRANCH: build
-          FOLDER: build
+          FOLDER: cmake_build
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
